versioned_docs/version-1.20.x/http-api/token-authentication.mdx
---
title: Token API
description: The API for managing access tokens and permissions for the database.
---

<head>
  <link
    rel="canonical"
    href="https://www.reduct.store/docs/http-api/token-authentication"
  />
</head>

import SwaggerComponent from "@site/src/components/SwaggerComponent";

# Token API Specification Reference

The Token API provides HTTP methods for managing access tokens and permissions for the database.

:::info
The API is available only when the `RS_API_TOKEN` environment variable is set.
:::

## Get a List of Tokens

This method returns a list of tokens and their metadata (it never returns token values). To use
it, you need an **[access token](../glossary#access-token)** with full access.

<SwaggerComponent
  method="GET"
  path="/api/v1/tokens"
  summary="Get a list of tokens"
  responses={[
    {
      status: "200",
      message: "OK",
      description: (
        <pre>
          <code>{`{
  "tokens": [
    {
      "name": "string",
      "created_at": "string",
      "expires_at": "string | null",
      "last_access": "string | null",
      "is_expired": "bool",
      "ttl": "number | null",
      "ip_allowlist": [],
      "permissions": {
        "full_access": "bool",
        "read": [],
        "write": []
      }
    }
  ]
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
    {
      status: "429",
      message: "Too Many Requests",
      summary: "Request rate limit is exceeded",
    },
  ]}
/>

## Show Information about a Token

This method provides full information about a token except its secret value. The
method requires an access token with full access.

<SwaggerComponent
  method="GET"
  path="/api/v1/tokens/:token_name"
  summary="Show information about a token"
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of the token to show",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Information about token",
      description: (
        <pre>
          <code>{`{
  "name": "string",
  "created_at": "string",
  "expires_at": "string | null",
  "last_access": "string | null",
  "is_expired": "bool",
  "ttl": "number | null",
  "ip_allowlist": [],
  "permissions": {
    "full_access": "bool",
    "read": [],
    "write": []
  }
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Current access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Current access token doesn't have enough permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Token with the given name does not exist",
    },
    {
      status: "429",
      message: "Too Many Requests",
      summary: "Request rate limit is exceeded",
    },
  ]}
/>

## Create a New Token

The method creates a new access token from a JSON request body. The request can
include permissions and additional token settings such as expiration, inactivity
TTL, and an IP allowlist. To use this method, you need an access token with
full access.

<SwaggerComponent
  method="POST"
  path="/api/v1/tokens/:token_name"
  summary="Create a new access token"
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of new token",
      },
    },
    {
      type: "body",
      details: {
        name: "permissions",
        dataType: "Object",
        isRequired: false,
        description:
          "Permissions for the token. Includes full_access, read, and write.",
      },
    },
    {
      type: "body",
      details: {
        name: "permissions.full_access",
        dataType: "Boolean",
        isRequired: false,
        description: "Create a token with full access. Default: false",
      },
    },
    {
      type: "body",
      details: {
        name: "permissions.read",
        dataType: "String[]",
        isRequired: false,
        description: "A list of bucket names for read access. Default: []",
      },
    },
    {
      type: "body",
      details: {
        name: "permissions.write",
        dataType: "String[]",
        isRequired: false,
        description: "A list of bucket names for write access. Default: []",
      },
    },
    {
      type: "body",
      details: {
        name: "ip_allowlist",
        dataType: "String[]",
        isRequired: false,
        description:
          "A list of allowed client IP addresses for this token. Default: [] (no IP restriction)",
      },
    },
    {
      type: "body",
      details: {
        name: "expires_at",
        dataType: "String",
        isRequired: false,
        description:
          "Absolute expiration time (RFC 3339 timestamp). Default: null (no absolute expiration)",
      },
    },
    {
      type: "body",
      details: {
        name: "ttl",
        dataType: "Number",
        isRequired: false,
        description:
          "Inactivity timeout in seconds. Token expires if not used for longer than ttl. Default: null (disabled)",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Returns value and timestamp of token",
      description: (
        <pre>
          <code>{`{
  "value": "string",
  "created_at": "string"
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
    {
      status: "409",
      message: "Conflict",
      summary: "Token with the same name already exists",
    },
    {
      status: "422",
      message: "Unprocessable Entity",
      summary:
        "Specified bucket does not exist or another validation error occurred",
    },
    {
      status: "429",
      message: "Too Many Requests",
      summary: "Request rate limit is exceeded",
    },
  ]}
/>

## Token Fields and Behavior

Token read endpoints (`GET /api/v1/tokens`, `GET /api/v1/tokens/:token_name`, `GET /api/v1/me`) return additional fields:

- `created_at`: Timestamp when the current token value was issued (created or rotated).
- `expires_at`: Absolute expiration time. After this time, the token is unusable.
- `ip_allowlist`: If non-empty, requests using this token are accepted only from the listed client IPs or CIDRs.
- `last_access`: Timestamp of the most recent token usage, or `null` if the token has not been used yet. This value is derived from audit metadata (see **[Audit Log](../guides/access-control#audit-log)**) and may remain `null` if auditing is disabled.
- `ttl`: Inactivity timeout (seconds). When set, the server can expire tokens that have not been used within the TTL.
- `is_expired`: Server-computed indicator showing whether the token is currently expired (for example due to `expires_at` or `ttl`).

## Rotate a Token

This method rotates a token value (secret) in one explicit API call. The old value
is invalidated immediately after rotation. To use it, a client should have an
access token with full access.

<SwaggerComponent
  method="POST"
  path="/api/v1/tokens/:token_name/rotate"
  summary="Rotate a token"
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of the token to rotate",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Returns new value and rotation timestamp",
      description: (
        <pre>
          <code>{`{
  "value": "string",
  "created_at": "string"
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Token with the given name doesn't exist",
    },
    {
      status: "409",
      message: "Conflict",
      summary:
        "Token cannot be rotated (for example init or provisioned token)",
    },
    {
      status: "429",
      message: "Too Many Requests",
      summary: "Request rate limit is exceeded",
    },
  ]}
/>

## Remove a Token

This method removes or revokes a token. To use it, a client should have an
access token with full access.

<SwaggerComponent
  method="DELETE"
  path="/api/v1/tokens/:token_name"
  summary="Remove a token"
  parameters={[
    {
      type: "path",
      details: {
        name: "token_name",
        isRequired: true,
        description: "Name of the token to remove",
      },
    },
  ]}
  responses={[
    {
      status: "200",
      message: "OK",
      summary: "Token was removed",
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "Access token is empty or invalid",
    },
    {
      status: "403",
      message: "Forbidden",
      summary: "Access token doesn't have enough permissions",
    },
    {
      status: "404",
      message: "Not Found",
      summary: "Token with the given name doesn't exist",
    },
    {
      status: "409",
      message: "Conflict",
      summary: "Token is provisioned",
    },
    {
      status: "429",
      message: "Too Many Requests",
      summary: "Request rate limit is exceeded",
    },
  ]}
/>

## Get Full Information about Current API Token

This method takes a token from the Authentication header and returns its
name, permissions, and additional information.

<SwaggerComponent
  method="GET"
  path="/api/v1/me"
  summary="Get full information about current API token"
  responses={[
    {
      status: "200",
      summary: "Returns JSON document",
      message: "OK",
      description: (
        <pre>
          <code>{`{
  "name": "string",
  "created_at": "string",
  "expires_at": "string | null",
  "last_access": "string | null",
  "is_expired": "bool",
  "ip_allowlist": [],
  "ttl": "number | null",
  "permissions": {
    "full_access": "bool",
    "read": [],
    "write": []
  }
}`}</code>
        </pre>
      ),
    },
    {
      status: "401",
      message: "Unauthorized",
      summary: "API token is invalid",
    },
    {
      status: "429",
      message: "Too Many Requests",
      summary: "Request rate limit is exceeded",
    },
  ]}
/>
